Fixes checkbox alignment and some other layout issues.

--- a/app/assets/stylesheets/alchemy/base.css.scss
+++ b/app/assets/stylesheets/alchemy/base.css.scss
@@ -251,10 +251,6 @@ div#page_editing_menu {
 	padding-right: 1px;
 }
 
-h2#sitemap_heading {
-	padding: 0;
-}
-
 div#userinfo {
 	text-align: right;
 	float: right;
@@ -431,24 +427,6 @@ ul.list div.detail_row div {
 
 ul.list span.right {
 	float: right;
-}
-
-#sitemap li.legend span.right {
-	margin-right: 52px;
-}
-
-#sitemap li.legend span.right span.page_move {
-	display: inline-block;
-	width: 74px;
-	text-align: center;
-}
-
-h2#sitemap_heading span.page_infos {
-	margin-right: 120px;
-	width: 40px;
-	text-align: center;
-	float: right;
-	line-height: 28px;
 }
 
 .handle {
